[package]
name = "GraphCut"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra="0.32"
rand = { version = "0.8", features = ["small_rng", "std_rng"] }
approx = "0.5"
num-traits = "0.2.19"
rayon = "1.11.0"
sprs = "0.11"
forceatlas2 = "0.6.1"
itertools = "0.14.0"
tracing = { version = "0.1", default-features = false, features = ["std"] }
rustc-hash = "2.1.1"
smallvec = "1.15.1"

[profile.release]
debug = true

[dev-dependencies]
tempfile = "3.21.0"
proptest = { version = "1", default-features = false, features = ["std", "timeout"] }