[package]
name = "GraphCut"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "0.8", features = ["small_rng", "std_rng"] }
approx = "0.5"
num-traits = "0.2.19"
sprs = "0.11"
itertools = "0.14.0"
rustc-hash = "2.1.1"

[profile.release]
debug = true

[dev-dependencies]
tempfile = "3.21.0"